; ModuleID = '/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-tango.c_intc_writel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-tango.c_intc_writel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tangox_irq_chip = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tangox_irq_chip*, i32, i32)* @intc_writel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @intc_writel(%struct.tangox_irq_chip* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.tangox_irq_chip*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.tangox_irq_chip* %0, %struct.tangox_irq_chip** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.tangox_irq_chip*, %struct.tangox_irq_chip** %4, align 8
  %9 = getelementptr inbounds %struct.tangox_irq_chip, %struct.tangox_irq_chip* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i32, i32* %5, align 4
  %12 = sext i32 %11 to i64
  %13 = add nsw i64 %10, %12
  %14 = call i32 @writel_relaxed(i32 %7, i64 %13)
  ret void
}

declare dso_local i32 @writel_relaxed(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
